--- a/public/rmarkdown_rladies/rmarkdownRladies_tst.Rmd
+++ b/public/rmarkdown_rladies/rmarkdownRladies_tst.Rmd
@@ -16,90 +16,89 @@ output:
 ---
 class: split-two white
 
-```{r}
-anicon::faa("leaf")
-
-```
 
 ---
 class: middle center bg-main1
----
-class: split-60 white
----
-
-background-image:url("turtle1.jpg")
-
-# Tip 1
 
 ---
-background-image:url("turtle2.jpg")
-# Tip 2
-
----
-
-
-background-image:url("turtle3.jpg")
-background-size: contain
-
-
-
-
----
-
-
-
-background-image:url("turtle5.jpg")
-
-
----
-background-image:url("turtle6.jpg")
-
-
----
-background-image:url("turtle7.jpg")
-background-size: contain
-
-
-
----
-
-
-
-background-image:url("turtle9.jpg")
-background-size: contain
-
-
----
-
-
-
-background-image:url("turtle11.jpg")
+background-image:url("screenshots/1img.png")
 background-size: contain
 
 ---
+background-image:url("screenshots/2img.png")
+background-size: contain
 
+---
+background-image:url("screenshots/3img.png")
+background-size: contain
 
+---
+background-image:url("screenshots/4img.png")
+background-size: contain
 
-background-image:url("turtle12.jpg")
+---
+background-image:url("screenshots/5img.png")
+background-size: contain
+
+---
+background-image:url("screenshots/6img.png")
+background-size: contain
+
+---
+background-image:url("screenshots/7img.png")
+background-size: contain
+
+---
+background-image:url("screenshots/8img.png")
+background-size: contain
+
+---
+background-image:url("screenshots/9img.png")
+background-size: contain
+
+---
+background-image:url("screenshots/10img.png")
+background-size: contain
+
+---
+background-image:url("screenshots/11img.png")
+background-size: contain
+
+---
+background-image:url("screenshots/12img.png")
+background-size: contain
+
+---
+background-image:url("screenshots/13img.png")
+background-size: contain
+
+---
+background-image:url("screenshots/14img.png")
+background-size: contain
 
 ---
 
+background-image:url("screenshots/15img.png")
+background-size: contain
 
-background-image:url("turtle13.jpg")
+---
+background-image:url("screenshots/16img.png")
+background-size: contain
+
+---
+background-image:url("screenshots/17img.png")
+background-size: contain
 
 ---
 
+class: middle center bg-main1
 
-background-image:url("turtle14.jpg")
+```{r, echo=FALSE}
+anicon::faa("wrench", size=5)
+```
 
+# Creating an R Markdown document
 ---
-
-background-image:url("turtle15.jpg")
-
----
-
-
-
 background-image:url("anatomy.jpeg")
 background-size:contain
 
