--- a/static/rmarkdown_rladies/rmarkdownRladies_tst.Rmd
+++ b/static/rmarkdown_rladies/rmarkdownRladies_tst.Rmd
@@ -14,12 +14,7 @@ output:
       highlightLines: true
       countIncrementalSlides: false
 ---
-class: split-two white
-
-
----
 class: middle center bg-main1
-
 ---
 background-image:url("screenshots/1img.png")
 background-size: contain
@@ -35,23 +30,18 @@ background-size: contain
 ---
 background-image:url("screenshots/4img.png")
 background-size: contain
-
 ---
 background-image:url("screenshots/5img.png")
 background-size: contain
-
 ---
 background-image:url("screenshots/6img.png")
 background-size: contain
-
 ---
 background-image:url("screenshots/7img.png")
 background-size: contain
-
 ---
 background-image:url("screenshots/8img.png")
 background-size: contain
-
 ---
 background-image:url("screenshots/9img.png")
 background-size: contain
@@ -77,7 +67,6 @@ background-image:url("screenshots/14img.png")
 background-size: contain
 
 ---
-
 background-image:url("screenshots/15img.png")
 background-size: contain
 
@@ -90,24 +79,6 @@ background-image:url("screenshots/17img.png")
 background-size: contain
 
 ---
-## Hi
-
-<video width="100%" height="100%" controls id="sc1">
-    <source src="media/sc1.mp4" type="video/mp4">
-</video>
-
----
-## Hello!
-
-<video width="100%" height="100%">
-<source src="static/rmarkdown_rladies/media/sc1.mp4" type="video/mp4">
-</video>
----
-
-<iframe width="560" height="315" src="media/sc1.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
----
-
 class: middle center bg-main1
 
 ```{r, echo=FALSE}
@@ -115,18 +86,87 @@ anicon::faa("wrench", size=5)
 ```
 
 # Creating an R Markdown document
+
 ---
+
+background-image: url(rmarkdown_step1.png)
+background-position: center
+background-size: contain
+
+
+---
+background-image: url(rmarkdown_step2.png)
+background-position: center
+background-size: contain
+
+---
+
+background-image: url(rmarkdown_step2_1.png)
+background-position: center
+background-size: contain
+---
+
+background-image: url(rmarkdown_step3.png)
+background-position: center
+background-size: contain
+
+class: center, middle
+
+
+---
+
+background-image: url(rmarkdown_step4.png)
+background-position: center
+background-size: contain
+
+class: center, middle
+
+---
+
+# Select a folder to save the document 
+
+![](rmarkdown_save1.png)
+---
+
+# Give a name to the document
+
+![](rmarkdown_save2.png)
+
+---
+
+background-image: url(rmarkdown_step5.png)
+background-position: center
+background-size: contain
+
+class: center, middle
+
+---
+
+background-image: url(rmarkdown_step6.png)
+background-position: center
+background-size: contain
+
+class: center, middle
+
+---
+
+background-image: url(rmarkdown_step7.png)
+background-position: center
+background-size: contain
+
+class: center, middle
+
+---
+
+
+<video width="100%" height="100%" controls id="sc1">
+<source src="media/sc1.mp4" type="video/mp4">
+</video>
+  
+---
+
 background-image:url("anatomy.jpeg")
 background-size:contain
 
 # R Markdown Anatomy
 
----
-
-class: center, middle
-
-# Thanks!
-
-Slides created via the R package [**xaringan**](https://github.com/yihui/xaringan).
-
-The chakra comes from [remark.js](https://remarkjs.com), [**knitr**](https://yihui.org/knitr), and [R Markdown](https://rmarkdown.rstudio.com).
