--- a/static/rmarkdown_rladies/rmarkdownRladies_tst.Rmd
+++ b/static/rmarkdown_rladies/rmarkdownRladies_tst.Rmd
@@ -1,9 +1,9 @@
 ---
 title: "R Markdown"
-subtitle: "On your marks, get set, ready go!"
+subtitle: "On your marks, get set, ready, go!"
 author: ""
 institute: "<br/>Thiyanga S. Talagala"
-date: "2020 December 28"
+date: "December 28, 2020"
 output:
   xaringan::moon_reader:
     css: [default, kunoichi, chocolate-fonts]
@@ -14,7 +14,28 @@ output:
       highlightLines: true
       countIncrementalSlides: false
 ---
+
+
 class: middle center bg-main1
+
+# Packages 
+
+## `install.packages("rmarkdown")`
+
+## `install.packages("knitr")`
+
+
+--
+
+```{r, echo=FALSE}
+anicon::faa("bell", animate="ring", size=5)
+```
+
+## Additional packages
+
+## `install.packages("tidyverse")`
+## `install.packages("reticulate")`
+
 ---
 background-image:url("screenshots/1img.png")
 background-size: contain
@@ -249,20 +270,175 @@ background-size:contain
 background-image:url("sc1/c15.png")
 background-size:contain
 
+
+---
+
+# Change Header
+
+.pull-left[
+
+**Code**
+
+```r
+
+# Header 1
+
+## Header 2
+
+### Header 3
+
+```
+
+]
+
+.pull-right[
+
+**Output**
+
+
+# Header 1
+
+## Header 2
+
+### Header 3
+
+
+
+]
+
+---
+
+# Add content
+
+.pull-left[
+
+**Code**
+
+```r
+
+# Header 1
+
+This is section 1.
+
+## Header 2
+
+This is section 1.2
+
+### Header 3
+
+This is section 1.2.1
+
+```
+
+]
+
+.pull-right[
+
+**Output**
+
+
+# Header 1
+
+This is section 1.
+
+## Header 2
+
+This is section 1.2
+
+### Header 3
+
+This is section 1.2.1
+
+
+
+
+]
+
+---
+
+# Text formatting
+
+.pull-left[
+
+## Code
+
+<img src="sc1/text.png" alt="text" width="300"/>
+
+
+]
+
+.pull-right[
+
+## Output
+
+*M1: This text is in italics.*
+
+_M2: This is also italics._
+
+**M3: This text is in bold.**
+
+__M4: This is also bold.__
+
+
+~~This text is strikethrough.~~
+
+]
+
+
 ---
 
 class: middle center bg-main1
 
 ```{r, echo=FALSE}
-anicon::faa("leaf", animate="spin", size=5)
+anicon::faa("align-center", animate="pulse", size=5)
 ```
 
-# Customizing your R Markdown document: code chunk
+# Include R codes
 
 ---
 
 background-image:url("sc1/c17.png")
 background-size:contain
+
+
+---
+
+background-image:url("sc1/inline-0.png")
+background-size:contain
+
+---
+
+background-image:url("sc1/inline-1.png")
+background-size:contain
+
+---
+
+background-image:url("sc1/inline-2.png")
+background-size:contain
+
+---
+
+background-image:url("sc1/inline-3.png")
+background-size:contain
+
+---
+
+background-image:url("sc1/inline-4.png")
+background-size:contain
+
+---
+
+background-image:url("sc1/inline-5.png")
+background-size:contain
+
+---
+class: middle center bg-main1
+
+`r anicon::faa('exclamation-triangle', animate='flash', size=7)`
+
+# Anatomy of R Markdown
+
+
 
 ---
 
@@ -357,6 +533,8 @@ background-size:contain
 
 class: middle center bg-main1
 
+`r anicon::faa('exclamation-circle', animate='bounce', size=7)`
+
 # Chunk options
 
 ---
@@ -388,10 +566,77 @@ background-size:contain
 ## eval [TRUE/ FALSE]
 
 ---
+class: bg-main1
+
+# Chunk options
+
+* `eval = FALSE` - prevent the code from being evaluated
+
+* `include = FALSE` - run the code but doesn't show it in the final document
+
+* `echo = FALSE` - prevent the code but not the results from appearing
+
+* `message = FALSE` - prevent messages from appearing in the finished file
+
+* `results = "hide"` - hide the printed output
+
+* `error = TRUE` - cause the render to continue even if the code returns an error
+
+* `comment=NA` - remove # from the  output
+
+--
+
+.pull-left[
+
+Without `comment=NA`
+
+```{r}
+a <- 1:5; a
+```
+
+]
+
+.pull-right[
+
+With `comment=NA`
+
+```{r, comment=NA}
+a <- 1:5; a
+```
+
+
+]
+---
+
+background-image:url("sc1/equations.png")
+background-size:contain
+
+# Mathematical Equations
+
+
+
+
+
+
+---
+
+class: middle center bg-main1
+
+## How to type Greek letters?
+
+Please read my blog post here: 
+
+https://thiyanga.netlify.app/post/greekletters/
+
+
+---
+
 
 class: middle center bg-main1
 
 # Styling your R Markdown document
+
+`r anicon::faa('thumbs-up', animate='float', size=5)`
 
 ## YAML
 
@@ -445,6 +690,8 @@ class: middle center bg-main1
 
 # Styling your R Markdown document
 
+`r anicon::faa('cogs', animate='vertical', size=5)`
+
 ## theme
 
 
@@ -473,6 +720,8 @@ class: middle center bg-main1
 
 # Styling your R Markdown document
 
+`r anicon::faa('cogs', animate='vertical', size=5)`
+
 ## highlight
 
 ---
@@ -485,11 +734,76 @@ background-size:contain
 background-image:url("sc1/SC/s22.png")
 background-size:contain
 
+
+---
+
+
+.pull-left[
+
+## Themes
+
+- default
+
+- cerulean
+
+- journal
+
+- flatly
+
+- darkly
+
+- readable
+
+- spacelab
+
+- united
+
+- cosmo
+
+- lumen
+
+- paper
+
+- sandstone
+
+- simplex
+
+- yeti
+
+
+]
+.pull-right[
+
+## Highlight
+
+- default
+
+- tango
+
+- espresso
+
+- zenburn
+
+- haddock
+
+- breezedark
+
+- kate
+
+- monochrome
+
+]
+
+
+
+
 ---
 
 class: middle center bg-main1
 
 # Styling your R Markdown document
+
+`r anicon::faa('cogs', animate='vertical', size=5)`
 
 ## Tabbed Sections
 
@@ -509,6 +823,8 @@ background-size:contain
 class: middle center bg-main1
 
 # R Markdown to R script
+
+`r anicon::faa('cogs', animate='spin', size=5)`
 
 
 ---
@@ -575,13 +891,19 @@ class: middle center bg-main1
 
 # R script to R Markdown
 
-## Method 1 (Using Rstudio)
+## Method 2 (Using R console)
+
+```r
+rmarkdown::render('11-Demo.R')
+```
 
 ---
 
 class: middle center bg-main1
 
 # Document your Analysis
+
+`r anicon::faa('cogs', animate='spin', size=5)`
 
 ---
 
@@ -625,15 +947,28 @@ class: middle center bg-main1
 
 # Include Latex tables
 
+`r anicon::faa('cogs', animate='spin', size=5)`
+
 ---
+
+
 
 background-image:url("sc1/SC/s39.png")
 background-size:contain
 
 ---
+
+background-image:url("sc1/courseoutline.png")
+background-size:contain
+
+---
+
+
 class: middle center bg-main1
 
 # Include images
+
+`r anicon::faa('cogs', animate='spin', size=5)`
 
 ---
 
@@ -651,11 +986,114 @@ background-image:url("sc1/SC/s42.png")
 background-size:contain
 
 ---
+class: middle center bg-main1
+
+# Python and R together
+
+## `install.packages("reticulate")`
+
+![](reticulated_python.png)
+
+---
+
+background-image:url("sc1/python1.png")
+background-size:contain
+
+---
+
+background-image:url("sc1/python2.png")
+background-size:contain
+
+---
+
+background-image:url("sc1/python3.png")
+background-size:contain
+
+---
 
 class: middle center bg-main1
 
 # Parameterized R Markdown
 
+`r anicon::faa('cogs', animate='spin', size=5)`
+
 ---
+
+
+background-image:url("sc1/param1.png")
+background-size:contain
+
+---
+
+background-image:url("sc1/param2.png")
+background-size:contain
+
+---
+
+background-image:url("sc1/param3.png")
+background-size:contain
+
+---
+
+background-image:url("sc1/param4.png")
+background-size:contain
+
+---
+
+background-image:url("sc1/param5.png")
+background-size:contain
+
+---
+
+background-image:url("sc1/param6.png")
+background-size:contain
+
+---
+
+background-image:url("sc1/param7.png")
+background-size:contain
+
+---
+
+background-image:url("sc1/param8.png")
+background-size:contain
+
+---
+
+background-image:url("sc1/param8-2.png")
+background-size:contain
+
+---
+
+background-image:url("sc1/param9.png")
+background-size:contain
+
+---
+
+class: middle center bg-main1
+
+# Acknowledgements:
+
+
+## Yihui Xie, RStudio
+
+## Emi Tanaka, Monash University, Australia
+
+ ## All contributors 
+
+---
+
+class: middle center bg-main1
+
+# Thank you
+
+
+`r anicon::faa('angellist', animate='shake', size=5)`
+
+## `r anicon::nia("Make some VOICE using R Makrkdown!", size=9)`
+
+Slides are available at [https://talks-thiyanga.netlify.app/rmarkdown_rladies/rmarkdownrladies_tst#1](https://talks-thiyanga.netlify.app/rmarkdown_rladies/rmarkdownrladies_tst#1) 
+
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
 
 
