--- a/public/rmarkdown_rladies/rmarkdownRladies_tst.Rmd
+++ b/public/rmarkdown_rladies/rmarkdownRladies_tst.Rmd
@@ -179,10 +179,15 @@ class: center, middle
 
 ---
 
+# Demo
 
 <video width="100%" height="100%" controls id="sc1">
-<source src="media/sc1.mp4" type="video/mp4">
+<source src="media/1_media.mp4" type="video/mp4">
 </video>
+
+---
+
+<iframe width="860" height="315" src="media/1_media.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   
 ---
 
