--- a/static/6_thesiswriting/main.Rmd
+++ b/static/6_thesiswriting/main.Rmd
@@ -238,7 +238,7 @@ knitr::include_graphics("mental.png")
 
 # Abstract
 
-**Do you want to make a good first impression one?**
+**Do you want to make a good first impression?**
 
 - A concise summary of the entire thesis
 
@@ -1089,10 +1089,8 @@ Q3. Fund more research into renewable energy
 Response: Strongly support (1), Somewhat support (2), Refused (3), Somewhat oppose (4), Strongly opposed (5) ]
 
 
-]
 
 .pull-right[
-
 
 
 |   |  1 | 2  | 3  | 4  | 5  |
@@ -1100,7 +1098,6 @@ Response: Strongly support (1), Somewhat support (2), Refused (3), Somewhat oppo
 | Q1  |15   | 20  | 2  | 38  |  25 |
 | Q2  | 10  | 14  | 2  |  44 |   30|
 |  Q3 | 6  |  9 | 2  |  41 |  42|
-
 
 
 ]
