--- a/static/8_innovation/innovation.Rmd
+++ b/static/8_innovation/innovation.Rmd
@@ -297,6 +297,12 @@ if (!is.null(x)) {
 
 ```
 
+
+---
+background-image: url(keynote.png)
+background-position: center
+background-size: contain
+
 ---
 
 # Small things matter a lot!
