--- a/static/rmarkdown_rladies/rmarkdownRladiesNigeria.Rmd
+++ b/static/rmarkdown_rladies/rmarkdownRladiesNigeria.Rmd
@@ -1074,6 +1074,22 @@ background-image:url("sc1/param9.png")
 background-size:contain
 
 ---
+background-image:url("sc1/bookdown.png")
+background-size:contain
+
+---
+background-image:url("sc1/posterdown2.png")
+background-size:contain
+
+---
+background-image:url("sc1/powerpoint.png")
+background-size:contain
+
+---
+background-image:url("sc1/vitae.png")
+background-size:contain
+
+---
 
 class: middle center bg-main1
 
